# Changelog

## [0.5.4] - 2019-09-29

### Added
- Doxyfile for generating code-documentation
- copy-assingment-operator to DataMap, DataArray and DataValue
- copy-assingment-constructor to DataMap, DataArray and DataValue


## [0.5.3] - 2019-09-18

### Fixed
- the output of the toString-method of the data-items was not complete json-format


## [0.5.2] - 2019-09-15

### Changed
- quotes around string in toString are now only added, the its calld by the DataMap or DataArray
  (this is basically an API-break, but its necessary for libKitsuneJson and to few for a 0.6 tag)


## [0.5.1] - 2019-09-08

### Added
- clear-function for table-items
- optional block-size option in constructor of the data-buffer
- support for bool-values in the DataValue-class

### Changed
- union for internal data-handling in the DataValue-class


## [0.5.0] - 2019-08-31

### Added 
- build-script for the library
- add show-one-options for tables to make it better readable for tables with one row
- column-width-limitation in tables
- rows in the table can now have multiple lines within one cell of the table
- new common method to split strings into part with a maximum size

### Changed
- renamed in data-items:
    - toString -> getString
    - getString(...) -> getStringByKey(...)
    - print -> toString
- renamed in table-items
    - print -> toString
- renamed DataObject to DataMap include all relevant getter and setter


## [0.4.1] - 2019-08-26

### Fixed
- data-buffer was missing in the readme-file, which was fixed


## [0.4.0] - 2019-08-25

### Added
- table-items with unit-tests
- short description to all files
- content for readme-file

### Changed
- in data-items: getSize() to size()
- in data-items: made print-method better usable
- renamed Test-class to UnitTest-class
- renamed data_structure-directory to common_items


## [0.3.0] - 2019-08-17

### Changed
- changed file-names for better readable

### Fixed
- fixed memory-leak in DataArray and DataObject


## [0.2.0] - 2019-08-10
